# hydmof-desktop-tauri

./: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  index.tsx  styles.css
src-tauri/: Cargo.toml  store.sqlite  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/migrations/2023-05-07-060004_create-admins/: down.sql  up.sql
src-tauri/migrations/2023-05-07-060016_create-years/: down.sql  up.sql
src-tauri/src/: controllers.rs  database.rs  email.rs  main.rs  schema.rs  unreal_repository.rs
src-tauri/src/controllers/: helpers.rs
src-tauri/src/controllers/helpers/: email.rs  generate_token.rs  jwt.rs
src-tauri/src/controllers/models/: admins.rs  users.rs
src-tauri/src/db/: mod.rs  models.rs
src-tauri/src/db/controllers/: repository.rs
src-tauri/src/helpers/: generate_token.rs
src/components/: AdminIcon.tsx  AlertInline.tsx  DataTable.tsx  EditableText.tsx  SideBar.tsx  TextInput.tsx  ToolTip.tsx  YearModal.tsx
src/components/table/: CustomCells.tsx  DataTable.tsx
src/layout/: AuthLayout.tsx  FinLayout.tsx
src/pages/: Accounts.tsx  ChangePassword.tsx  Confirm.tsx  Expenses.tsx  Finances.tsx  ForgottenPassword.tsx  Login.tsx  Profile.tsx  Register.tsx  Results.tsx
src/store/: authStore.ts  modalStore.ts  yearStore.ts
src/types/: AuthTypes.ts  YearsTypes.ts
