[package]
name = "hydmof-desktop-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = "GNU GPLv3"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2", features = ["shell-open"] }
lettre = "0.10"
tracing-subscriber = "0.3"
rand = "0.8.5"
tokio = "1.28.0"
diesel = { version = "2.0.4", features = ["sqlite"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
libsqlite3-sys = { version="0.26.0", features = ["bundled"] }
dotenv = "0.15.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
