[package]
name = "hydmof-desktop-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = "GNU GPLv3"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
ts-rs = "6.2"
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lettre = "0.10"
dotenv = "0.15.0"
strum = "0.24.1"
strum_macros = "0.24"
uuid = {version = "1.3.0", features = ["v4", "fast-rng"] }
surrealdb = {version ="1.0.0-beta.9", features = ["kv-rocksdb"] }
tokio = { version = "1.21.2", features = ["full"] }
async-trait = "0.1.68"
futures = "0.3.28"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
