[package]
name = "hydmof-desktop-tauri"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = "GNU GPLv3"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2", features = [] }

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled", "serde_json"] }
tauri = { version = "1.2", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = "6.2"
tracing-subscriber = "0.3"
rand = "0.8.5"
argon2 = "0.5.0"
uuid = {version = "1.3.0", features = ["v4", "v7", "fast-rng"] }
lettre = "0.10"
dotenv = "0.15.0"


[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
